--- a/Css/Home.css
+++ b/Css/Home.css
@@ -1,9 +1,12 @@
-body {
+.p-5 {
     background-image: url(../img/file.jpg.jpg) !important;
     background-size: cover;
 } 
-.container{
-    
+.navbar-brand{
+    font-size: 20pt;
+}
+.nav-link{
+    font-weight: 500;
 }
 .container-1{
 padding-top: 300px;
@@ -12,3 +15,11 @@ padding-top: 300px;
     font-size: 60pt;
     font-weight: bold;
 }
+.section-header {
+    font-weight: bold;
+    color: black;
+    }
+    .card {
+        border: none;
+        box-shadow: 0 1rem 3rem rgba(145, 145, 145, 0.175) !important;
+    }
