--- a/Css/Home.css
+++ b/Css/Home.css
@@ -30,6 +30,10 @@ padding-top: 300px;
     box-shadow: 0 1rem 3rem rgba(145, 145, 145, 0.175) !important;
 }
 
+.blogCard img{
+    height : 220px;
+}
+
 .about {
     padding-bottom: 70px;
 }
