--- a/Css/Home.css
+++ b/Css/Home.css
@@ -116,7 +116,6 @@ padding-top: 300px;
 
 .zone {
     cursor:pointer;
-    /* display:inline-block; */
     color:#FFF;
     font-size:2em;
     border-radius:4px;
@@ -156,7 +155,7 @@ padding-top: 300px;
 }
 
 .blue{
-    background: #7abcff; /* Old browsers */
+    background: #7abcff;
     background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
